# asdf-dat

./: .anchorrc  .env.example  .env.template  .gitignore  .mocharc.json  ASDfNfUHwVGfrg3SV7SQYWhaVxnrCUZyWmMpWJAPu4MZ.json  AUDIT-REPORT-2025-11-25.md  Anchor.toml  BUILD-WINDOWS-FR.md  BUILD.md  BUILD_ISSUES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVNET_DEPLOYMENT.md  DEVNET_LIMITATIONS.md  DEVNET_SETUP_STATUS.md  DEVNET_SETUP_SUMMARY.md  INFRASTRUCTURE_ANALYSIS_CCM.md  LAUNCH_CHECKLIST.md  MAINNET-AUDIT-REPORT.md  MAINNET_READINESS.md  MAYHEM-MODE-LAUNCH-GUIDE-EN.md  MAYHEM-MODE-LAUNCH-GUIDE.md  PHASE5_COMPLETE.md  PRODUCTION-WORKFLOW.md  README.md  REFACTORING_STATUS.md  SCRIPTS-AUDIT.md  SOLUTION.md  SPRINT3_SUMMARY.md  TROUBLESHOOTING.md  VALIDATION-REPORT.md  WINDOWS_SETUP.md  asdf_dat.json  build-windows-alternative.ps1  build-windows-auto-downgrade.ps1  build-windows-manual-compile.ps1  build-windows-manual-update.ps1  build-windows-update-solana.ps1  (+24 more)
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
config/: devnet-dat-deployment.json
dashboard/: admin.html  app.js  index.html  styles.css
devnet-tokens/: 01-froot.json  01-troot.json  02-fs1.json  02-ts1.json  03-fs2.json  03-ts2.json  04-fs3.json  04-ts3.json  05-fs4.json  05-tmay.json
docs/: API_REFERENCE.md  ARCHITECTURE-ISSUES.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  AUDIT_REPORT_V2.md  DEVELOPER_GUIDE.md  DEVNET_TESTING_PROCEDURE.md  E2E-TEST-PROCEDURE.md  EMERGENCY_RECOVERY.md  FAQ.md  FORMAL_SPEC.md  GLOSSARY.md  INTEGRATION.md  MAINNET_DEPLOYMENT_CHECKLIST.md  MAINNET_DEPLOYMENT_SOP.md  MAYHEM-MODE-TESTING-STATUS.md  METADATA-UPLOAD-GUIDE.md  MIN_SOL_THRESHOLD_ANALYSIS.md  OPERATIONS.md  README.md  REFACTORING-SUMMARY.md  (+8 more)
programs/asdf-burn-engine/: Cargo.toml
programs/asdf-burn-engine/src/: constants.rs  errors.rs  events.rs  formal_verification.rs  lib.rs  tests.rs
programs/asdf-burn-engine/src/contexts/: mod.rs
programs/asdf-burn-engine/src/helpers/: cpi.rs  mod.rs
programs/asdf-burn-engine/src/state/: user_stats.rs  validator_state.rs
programs/asdf-dat/: Cargo.toml
programs/asdf-dat/src/: constants.rs  errors.rs  events.rs  lib.rs  lib.rs.backup-20251122-194616  lib.rs.backup2  tests.rs
programs/asdf-dat/src/backup-devnet/: VERSION.md  lib.rs
programs/asdf-dat/src/contexts/: mod.rs
programs/asdf-dat/src/helpers/: cpi.rs  math.rs
programs/asdf-dat/src/state/: dat_state.rs  mod.rs  rebate_pool.rs  token_stats.rs
(+364 files in other folders)
