[package]
name = "asdf-dat"
version = "0.1.0"
description = "ASDF DAT"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asdf_dat"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
